# enip-rs

./: CPX-AP-I-EP_NoConfig.eds  CTEU-EP.eds  Cargo.toml  LICENSE  README.md
src/: enums.rs  lib.rs
