[package]
name = "enip"
description = "Rust implementation of the Ethernet/IP industrial control protocol"
authors = ["Todd Groff"]
repository = "https://github.com/groffta/enip-rs"
readme = "README.md"
license = "MIT"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive_enum = "1.0.2"
